<resources>
    <string name="app_name">WhatsApp</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
</resources>
